@@ -41,11 +41,20 @@ namespace gameswf
 	void	as_as_function::operator()(const fn_call& fn)
 	// Dispatch.
 	{
+
 		assert(fn.env);
+		as_environment* env = fn.env;
+		if (fn.this_ptr)
+		{
+			if (fn.this_ptr->get_environment())
+			{
+				env = fn.this_ptr->get_environment();
+			}
+		}
 
 		// Set up local stack frame, for parameters and locals.
-		int	local_stack_top = fn.env->get_local_frame_top();
-		fn.env->add_frame_barrier();
+		int	local_stack_top = env->get_local_frame_top();
+		env->add_frame_barrier();
 
 		if (m_is_function2 == false)
 		{
@@ -56,15 +65,15 @@ namespace gameswf
 			for (int i = 0; i < args_to_pass; i++)
 			{
 				assert(m_args[i].m_register == 0);
-				fn.env->add_local(m_args[i].m_name, fn.arg(i));
+				env->add_local(m_args[i].m_name, fn.arg(i));
 			}
 
 			if (fn.this_ptr)
 			{
-				fn.env->set_local("this", fn.this_ptr);
+				env->set_local("this", fn.this_ptr);
 
 				// Put 'super' in a local var.
-				fn.env->add_local("super", fn.this_ptr->get_proto());
+				env->add_local("super", fn.this_ptr->get_proto());
 			}
 		}
 		else
@@ -72,7 +81,7 @@ namespace gameswf
 			// function2: most args go in registers; any others get pushed.
 			
 			// Create local registers.
-			fn.env->add_local_registers(m_local_register_count);
+			env->add_local_registers(m_local_register_count);
 
 			// Handle the explicit args.
 			int	args_to_pass = imin(fn.nargs, m_args.size());
@@ -81,25 +90,25 @@ namespace gameswf
 				if (m_args[i].m_register == 0)
 				{
 					// Conventional arg passing: create a local var.
-					fn.env->add_local(m_args[i].m_name, fn.arg(i));
+					env->add_local(m_args[i].m_name, fn.arg(i));
 				}
 				else
 				{
 					// Pass argument into a register.
 					int	reg = m_args[i].m_register;
-					fn.env->set_register(reg, fn.arg(i));
+					env->set_register(reg, fn.arg(i));
 				}
 			}
 
 			// Handle the implicit args.
 			int	current_reg = 1;
 
-			as_object_interface* this_ptr = fn.this_ptr ? fn.this_ptr : fn.env->m_target;
+			as_object_interface* this_ptr = fn.this_ptr ? fn.this_ptr : env->m_target;
 			if (m_function2_flags & 0x01)
 			{
 				// preload 'this' into a register.
 				IF_VERBOSE_ACTION(log_msg("-------------- preload this=0x%X to register %d\n", this_ptr, current_reg));
-				fn.env->set_register(current_reg, this_ptr);
+				env->set_register(current_reg, this_ptr);
 				current_reg++;
 
 			}
@@ -111,7 +120,7 @@ namespace gameswf
 			else
 			{
 				// Put 'this' in a local var.
-				fn.env->add_local("this", as_value(this_ptr));
+				env->add_local("this", as_value(this_ptr));
 			}
 
 			// Init arguments array, if it's going to be needed.
@@ -131,7 +140,7 @@ namespace gameswf
 			if (m_function2_flags & 0x04)
 			{
 				// preload 'arguments' into a register.
-				fn.env->set_register(current_reg, arg_array.get_ptr());
+				env->set_register(current_reg, arg_array.get_ptr());
 				current_reg++;
 			}
 
@@ -142,14 +151,14 @@ namespace gameswf
 			else
 			{
 				// Put 'arguments' in a local var.
- 				fn.env->add_local("arguments", as_value(arg_array.get_ptr()));
+ 				env->add_local("arguments", as_value(arg_array.get_ptr()));
 			}
 
 			if (m_function2_flags & 0x10)
 			{
 				// Put 'super' in a register.
 				IF_VERBOSE_ACTION(log_msg("-------------- preload super=0x%X to register %d\n", fn.this_ptr->get_proto(), current_reg));
-				fn.env->set_register(current_reg, fn.this_ptr->get_proto());
+				env->set_register(current_reg, fn.this_ptr->get_proto());
 				current_reg++;
 			}
 
@@ -160,13 +169,13 @@ namespace gameswf
 			else
 			{
 				// Put 'super' in a local var.
-				fn.env->add_local("super", fn.this_ptr->get_proto());
+				env->add_local("super", fn.this_ptr->get_proto());
 			}
 
 			if (m_function2_flags & 0x40)
 			{
 				// Put '_root' in a register.
-				fn.env->set_register(current_reg, fn.env->m_target->get_root_movie());
+				env->set_register(current_reg, env->m_target->get_root_movie());
 				current_reg++;
 			}
 
@@ -174,9 +183,9 @@ namespace gameswf
 			{
 				// Put '_parent' in a register.
 				array<with_stack_entry>	dummy;
-				as_value	parent = fn.env->get_variable("_parent", dummy);
+				as_value	parent = env->get_variable("_parent", dummy);
 				IF_VERBOSE_ACTION(log_msg("-------------- preload _parent=0x%X to register %d\n", parent, current_reg));
-				fn.env->set_register(current_reg, parent);
+				env->set_register(current_reg, parent);
 				current_reg++;
 			}
 
@@ -184,21 +193,21 @@ namespace gameswf
 			{
 				// Put '_global' in a register.
 				IF_VERBOSE_ACTION(log_msg("-------------- preload _global=0x%X to register %d\n", get_global(), current_reg));
-				fn.env->set_register(current_reg, get_global());
+				env->set_register(current_reg, get_global());
 				current_reg++;
 			}
 		}
 
 		// Execute the actions.
-		m_action_buffer.execute(fn.env, m_start_pc, m_length, fn.result, m_with_stack, m_is_function2);
+		m_action_buffer.execute(env, m_start_pc, m_length, fn.result, m_with_stack, m_is_function2);
 
 		// Clean up stack frame.
-		fn.env->set_local_frame_top(local_stack_top);
+		env->set_local_frame_top(local_stack_top);
 
 		if (m_is_function2)
 		{
 			// Clean up the local registers.
-			fn.env->drop_local_registers(m_local_register_count);
+			env->drop_local_registers(m_local_register_count);
 		}
 	}
 }
