@@ -223,6 +223,8 @@ namespace gameswf
 
 		virtual void collect_garbage();
 		virtual void clear_refs(as_object_interface* this_ptr);
+		virtual as_environment*	get_environment() { return &m_as_environment; }
+
 		virtual void dump();
 	};
 }
